Improving save button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                           <div class="editing">
                               <textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
                               <a class="delete-link" href="javascript:void(0)" ng-click="deleteMessage(message)"><i class="fa fa-times"></i></a>
-                              <button ng-click="isEditing = false;">Done</button>
+                              <button ng-click="isEditing = false;">DONE</button>
                           </div>
                       </div>
                   </div>
