--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span ng-show="boardId !== ''" class="message-list" ng-repeat="type in board.columns">
             <ul class="column column_{{ type.id }}">
               <div class="column-header">
-                <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()"><i class="fa fa-times"></i></a>
+                <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="utils.openDialogDeleteColumn(this)"><i class="fa fa-times"></i></a>
                 <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
                   {{type.value}}
                 </h2>
@@ -95,6 +95,12 @@
     <h1>Delete note</h1>
     <p>Are you sure you want to delete this note?</strong></p>
     <button ng-click="deleteMessage(message)">Delete</button>
+    <a ng-click="utils.closeAll()">Cancel</a>
+  </script>
+  <script type="text/ng-template" id="deleteColumn">
+    <h1>Delete column</h1>
+    <p>Are you sure you want to delete this column?</strong></p>
+    <button ng-click="deleteLastColumn()">Delete</button>
     <a ng-click="utils.closeAll()">Cancel</a>
   </script>
   <script>
