Fixing margin in button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <script type="text/ng-template" id="deleteCard">
     <h1>Delete note</h1>
     <p>Are you sure you want to delete this note?</strong></p>
-    <button ng-click="deleteMessage(message)">Delete</button>
+    <button id="delete-button" ng-click="deleteMessage(message)">Delete</button>
     <a ng-click="utils.closeAll()">Cancel</a>
   </script>
   <script type="text/ng-template" id="deleteColumn">
