--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
   <script type="text/ng-template" id="deleteCard">
     <h1>Delete note</h1>
     <p>Are you sure you want to delete this note?</strong></p>
-    <button id="delete-button" ng-click="deleteMessage(message)">Delete</button>
+    <button class="delete-button" ng-click="deleteMessage(message)">Delete</button>
     <a ng-click="utils.closeAll()">Cancel</a>
   </script>
   <script type="text/ng-template" id="deleteColumn">
     <h1>Delete column</h1>
     <p>Are you sure you want to delete this column?</strong></p>
-    <button ng-click="deleteLastColumn()">Delete</button>
+    <button class="delete-button" ng-click="deleteLastColumn()">Delete</button>
     <a ng-click="utils.closeAll()">Cancel</a>
   </script>
   <script>
