--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,9 +13,18 @@
 
   <!-- include dependencies source files here-->
   <script type="text/javascript" src="js/vendor/angular.min.js"></script>
+  <script type="text/javascript" src="js/vendor/angular-mocks.js"></script>
+  <script type="text/javascript" src="js/vendor/angularfire.min.js"></script>
+  <script type="text/javascript" src="js/vendor/firebase.js"></script>
+  <script type="text/javascript" src="js/vendor/ngDialog.min.js"></script>
+  <script type="text/javascript" src="js/vendor/zepto.min.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/mainController.js"></script>
+  <script type="text/javascript" src="js/utils.js"></script>
+  <script type="text/javascript" src="js/auth.js"></script>
+  <script type="text/javascript" src="js/enterClick.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="test/mainControllerTest.js"></script>
