--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body ng-controller="MainCtrl">
     <header>
-        <h1>Fireideaz - {{boardId}}</h1>
+        <h1>Fun Retrospectives - {{boardId}}</h1>
         <span>
             <label>Sort by</label>
             <select ng-model="sortField">
