--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </select>
             <button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
             <button ng-click="utils.openDialogBoard(this)">New board</button>
-            <iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=fireideaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+            <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
         </span>
     </header>
     <span class="container">
