Fixing trash icon

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                       <div class="message-body">
                           <div class="editing">
                               <textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
-                              <a class="delete-link" href="javascript:void(0)" ng-click="utils.openDialogDeleteCard(this)"><i class="fa fa-times"></i></a>
+                              <a class="delete-link" href="javascript:void(0)" ng-click="utils.openDialogDeleteCard(this)"><i class="fa fa-trash"></i></a>
                               <button ng-click="isEditing = false;">DONE</button>
                           </div>
                       </div>
