Adding prime directive

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <header ng-show="userId !== ''">
         <h1>Fun Retrospectives - {{boardId}}</h1>
         <span>
+            <span class="prime"><i class="fa fa-star"></i>Prime Directive
+              <span>“Regardless of what we discover, we understand and truly believe that everyone did the best job he or she could, given what was known at the time, his or her skills and abilities, the resources available and the situation at hand”</span>
+            </span>
             <label>Sort by</label>
             <select ng-model="sortField">
               <option value="$id">Created date</option>
