--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
         </span>
     </header>
+    <input id="board-context" ng-model="boardContext" ng-change="changeBoardContext()" placeholder="Set the context of the retrospective here..." />
     <span class="container">
         <span ng-show="boardId !== ''" class="message-list" ng-repeat="type in board.columns">
             <ul class="column column_{{ type.id }}">
