Change page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html ng-app="fireideaz">
   <head>
     <meta charset="UTF-8">
-    <title ng-bind="'Fireideaz &mdash; ' + boardId">Fireideaz</title>
+    <title ng-bind="'Fun Retrospectives &mdash; ' + boardId">Fun Retrospectives</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
