--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ It is time to gather data, talk about the positive stuff, recognize people and s
     <a ng-click="utils.closeAll()">Cancel</a>
   </script>
   <script type="text/ng-template" id="mergeCards">
-    <h1>Delete column</h1>
+    <h1>Merge cards</h1>
     <p>Are you sure you want to merge these two cards?</strong></p>
     <button class="delete-button" ng-click="dropped(dragEl, dropEl)">Merge</button>
     <a ng-click="utils.closeAll()">Cancel</a>
