--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <div class="back">
                       <div class="message-body">
                           <div class="editing">
-                              <textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
+                              <textarea ng-model="message.text" ng-change="messages.$save(message)"></textarea>
                               <a class="delete-link" href="javascript:void(0)" ng-click="utils.openDialogDeleteCard(this)"><i class="fa fa-trash"></i></a>
                               <button ng-click="isEditing = false;">DONE</button>
                           </div>
@@ -86,7 +86,25 @@
         <div class="rect rect4"></div>
         <div class="rect rect5"></div>
     </div>
-    <div class="home" ng-show="userId === ''">
+    <div ng-show="showNotification()" class="overlay" ng-cloak></div>
+    <div ng-show="showNotification()" class="feature-notification" ng-cloak>
+      <i class="fa fa-times" ng-click="seeNotification()"></i>
+      <span class="title">We are happy to announce new features!</span> <br><br> 
+      <span class='feature'>
+        <h3>Merge cards</h3>
+        <img src="merge.png" />
+      </span>
+      <span class='feature'>
+        <h3>Set the context</h3>
+        <img src="image1.png" />
+      </span>
+      <span class='feature margin-top'>
+        <h3>Prime Directive</h3>
+        <img src="image2.png" />
+      </span>
+      <button ng-click="seeNotification()">Got it!</button>
+    </div>
+    <div class="home" ng-show="userId === ''" ng-cloak>
     <section>
       <h1><img src="logo.png" />Fun Retrospectives</h1>
       <button ng-click="utils.openDialogBoard(this)">NEW BOARD</button>
