--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div ng-show="showNotification()" class="overlay" ng-cloak></div>
     <div ng-show="showNotification()" class="feature-notification" ng-cloak>
       <i class="fa fa-times" ng-click="seeNotification()"></i>
-      <span class="title">We are happy to announce new features!</span> <br><br> 
+      <span class="title">We're happy to announce new features!</span> <br><br> 
       <span class='feature'>
         <h3>Merge cards</h3>
         <img src="merge.png" />
