Small change on homepage text

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Why is this retrospective being held? What will it cover? Retrospectives, simila
       </h2>
       <img src="image3.png"/>
       <p>
-It is time to gather data, talk about the positive stuff, recognize people and seek improvements. Select an activity, create and customize your board, and go for it!
+It is time to gather data, talk about the positive stuff, recognize people and seek improvements. Select an activity, create and customize your board. Go for it!
       </p>
     </section>
     <section>
