Moving images to img folder and added more info on readme

--- a/index.html
+++ b/index.html
@@ -91,26 +91,26 @@
       <span class="title">We're happy to announce new features!</span> <br><br> 
       <span class='feature'>
         <h3>Merge cards</h3>
-        <img src="merge.png" />
+        <img src="img/merge.png" />
       </span>
       <span class='feature'>
         <h3>Set the context</h3>
-        <img src="image1.png" />
+        <img src="img/image1.png" />
       </span>
       <span class='feature margin-top'>
         <h3>Prime Directive</h3>
-        <img src="image2.png" />
+        <img src="img/image2.png" />
       </span>
       <button ng-click="seeNotification()">Got it!</button>
     </div>
     <div class="home" ng-show="userId === ''" ng-cloak>
     <section>
-      <h1><img src="logo.png" />Fun Retrospectives</h1>
+      <h1><img src="img/logo.png" />Fun Retrospectives</h1>
       <button ng-click="utils.openDialogBoard(this)">NEW BOARD</button>
     </section>
     <section class="step">
       <h2>Set the context</h2>
-      <img src="image1.png"/>
+      <img src="img/image1.png"/>
       <p>
 Why is this retrospective being held? What will it cover? Retrospectives, similarly to any other meeting, are more effective if the participants align their expectations before getting into it.
       </p>
@@ -120,13 +120,13 @@ Why is this retrospective being held? What will it cover? Retrospectives, simila
         Read the prime directive
       </h2>
 <p class="left">The statement is invaluable for setting the meeting tone. Make it visible to all participants, and read it out loud before running your retrospective activity.</p>
-<img src="image2.png"/>
+<img src="img/image2.png"/>
     </section>
     <section class="step">
       <h2>
         Go for it!
       </h2>
-      <img src="image3.png"/>
+      <img src="img/image3.png"/>
       <p>
 It is time to gather data, talk about the positive stuff, recognize people and seek improvements. Select an activity, create and customize your board. Go for it!
       </p>
