--- a/index.html
+++ b/index.html
@@ -107,6 +107,29 @@
     <section>
       <h1><img src="img/logo.png" />Fun Retrospectives</h1>
       <button ng-click="utils.openDialogBoard(this)">NEW BOARD</button>
+      <style type="text/css">
+        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      </style>
+      <div id="mc_embed_signup">
+        <form action="//funretrospectives.us13.list-manage.com/subscribe/post?u=a1df66d58e9447064d73bf0bc&amp;id=405856384a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+            <div class="mc-field-group">
+              <input type="email" value="" name="EMAIL" placeholder="Enter your email address" class="required email" id="mce-EMAIL">
+              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button second">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+              <input type="text" name="b_a1df66d58e9447064d73bf0bc_405856384a" tabindex="-1" value="">
+            </div>
+            
+          </div>
+        </form>
+      </div>
+      <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+      <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
     </section>
     <section class="step">
       <h2>Set the context</h2>
