--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                           <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
                       </div>
                       <div class="votes">
-                          <a ng-controller="MessageCtrl" ng-hide="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="toggleVote(message.$id, message.votes)">
+                          <a ng-hide="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="toggleVote(message.$id, message.votes)">
                               <i class="fa fa-thumbs-o-up"></i>
                           </a>
-                          <strong><a ng-controller="MessageCtrl" ng-show="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="toggleVote(message.$id, message.votes)"><i class="fa fa-thumbs-o-down"></i> </a>+ {{ message.votes }}</strong>
+                          <strong><a ng-show="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="toggleVote(message.$id, message.votes)"><i class="fa fa-thumbs-o-down"></i> </a>+ {{ message.votes }}</strong>
                       </div>
                   </div>
                   <div class="back">
@@ -126,7 +126,7 @@
             <div style="position: absolute; left: -5000px;" aria-hidden="true">
               <input type="text" name="b_a1df66d58e9447064d73bf0bc_405856384a" tabindex="-1" value="">
             </div>
-            
+
           </div>
         </form>
       </div>
