New functionality to clear board and copy board

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
               <option value="$id">Created date</option>
               <option value="votes">Votes</option>
             </select>
+            <button id="copy-board" ng-click="utils.openDialogCopyBoard(this)">Copy board</button>
+            <button ng-click="utils.openDialogDeleteCards(this)">Delete cards</button>
             <button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
             <button class="first" ng-click="utils.openDialogBoard(this)">New board</button>
             <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
@@ -161,6 +163,17 @@ It is time to gather data, talk about the positive stuff, recognize people and s
     </section>
     </div>
   </body>
+  <script type="text/ng-template" id="deleteCards">
+    <h1>Delete cards</h1>
+    <p>Are you sure you want to delete all cards?</strong></p>
+    <button class="delete-button" ng-click="deleteCards()">Delete</button>
+    <a ng-click="utils.closeAll()">Cancel</a>
+  </script>
+  <script type="text/ng-template" id="copyBoard">
+    <h1>Copy Board</h1>
+    <p ng-bind-html="getBoardText()"></p>
+    <button ng-click="utils.closeAll()">Close</button>
+  </script>
   <script type="text/ng-template" id="addNewColumn">
     <h1>New column</h1>
     <input ng-model="newColumn" type="text"></input>
