improving layout and text on new features

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
               <option value="$id">Created date</option>
               <option value="votes">Votes</option>
             </select>
+            <button class="delete-button" ng-click="utils.openDialogDeleteCards(this)">Delete cards</button>
             <button id="copy-board" ng-click="utils.openDialogCopyBoard(this)">Copy board</button>
-            <button ng-click="utils.openDialogDeleteCards(this)">Delete cards</button>
             <button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
             <button class="first" ng-click="utils.openDialogBoard(this)">New board</button>
             <iframe src="https://ghbtns.com/github-btn.html?user=funretro&repo=distributed&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
@@ -164,13 +164,15 @@ It is time to gather data, talk about the positive stuff, recognize people and s
     </div>
   </body>
   <script type="text/ng-template" id="deleteCards">
-    <h1>Delete cards</h1>
-    <p>Are you sure you want to delete all cards?</strong></p>
+    <p class="header">Danger Zone</p>
+    <p>Are you sure you want to delete all cards?</p>
+    <p>Once you delete all cards, there is no going back. Please be certain.</p>
     <button class="delete-button" ng-click="deleteCards()">Delete</button>
     <a ng-click="utils.closeAll()">Cancel</a>
   </script>
   <script type="text/ng-template" id="copyBoard">
     <h1>Copy Board</h1>
+    <p>Select cards text with mouse and copy it</p>
     <p ng-bind-html="getBoardText()"></p>
     <button ng-click="utils.closeAll()">Close</button>
   </script>
