--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="dist/vendor.css">
     <link rel="stylesheet" type="text/css" href="dist/main.css">
+    <script src="dist/vendor.js"></script>
     <script src="dist/main.js"></script>
   </head>
   <body ng-controller="MainCtrl">
