--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title ng-bind="'Fun Retro &mdash; ' + boardId">Fun Retro</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="dist/vendor.css">
-    <link rel="stylesheet" type="text/css" href="dist/main.css">
-    <script src="dist/vendor.js"></script>
-    <script src="dist/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="vendor.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="vendor.js"></script>
+    <script src="main.js"></script>
   </head>
   <body ng-controller="MainCtrl">
     <div page-header></div>
