Improve export feature

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ It is time to gather data, talk about the positive stuff, recognize people and s
   <script type="text/ng-template" id="copyBoard">
     <h1>Export Board</h1>
     <p>Select cards text with mouse and copy it</p>
-    <p ng-bind-html="getBoardText()"></p>
+    <p class="copy-text" ng-bind-html="getBoardText()"></p>
     <button ng-click="utils.closeAll()">Close</button>
   </script>
   <script type="text/ng-template" id="addNewColumn">
